# traceloop

./: .gitignore  .golangci.yml  CONTRIBUTING.md  DOMAINS.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  coverage.html  demo.py  go.mod  go.sum  status.json  test_integration.py  test_python_sdk.py
.github/workflows/: ci.yml  docker-publish.yml  publish-python.yml  release.yml  validate-quickstart.yml
cmd/traceloop/: main.go
docker/: Dockerfile
examples/: simple_test.py
examples/langchain/: basic_agent.py
examples/openai/: simple_chat.py
scripts/: update-status-page.py  validate-quickstart.sh
sdk/python/: .flake8  .isort.cfg  mypy.ini  pyproject.toml  setup.py
sdk/python/tests/: test_traceloop.py
sdk/python/traceloop/: __init__.py  client.py  context.py  decorators.py  types.py
server/: server.go
server/grpc/: server.go
server/storage/: store.go  store_test.go
