[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceloop"
version = "0.1.0"
authors = [
    {name = "Shailesh Pant", email = "shailesh@traceloop-ai.dev"},
]
description = "Production observability for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "protobuf>=4.21.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "flake8>=4.0.0",
    "types-requests>=2.28.0",
]
langchain = [
    "langchain>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.8.0",
]

[project.scripts]
traceloop = "traceloop.cli:main"

[project.urls]
Homepage = "https://github.com/traceloop-ai/traceloop"
Repository = "https://github.com/traceloop-ai/traceloop"
Documentation = "https://traceloop-ai.dev"
"Bug Tracker" = "https://github.com/traceloop-ai/traceloop/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["traceloop*"]

[tool.setuptools.package-data]
traceloop = ["py.typed"]
